2008-02-04  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir/mimedir-recurrence.c (mimedir_recurrence_write_to_string): 
	add COUNT= for recurrence (Bug 35)

2007-11-08  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir/mimedir-attribute.c: allow for UTF-8 in 
	attribute parameters (Bug 118)

2007-09-05  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir/mimedir-vcard.c: make the nickname property writeable with writing it meaning
	the new value is prepended to the list (writing the nickname-list property
	still means the whole list is replaced)

2007-08-03  Florian Boor <florian@kernelconcepts.de>

	* Relase 0.4.2

2007-08-01  Florian Boor <florian@kernelconcepts.de>

	* docs/reference/mimedir/Makefile.am: Fix errors with up to date
	  gtk-doc.
	* Makefile.am: Remove some more files with distclean target.

2007-07-26  Florian Boor <florian@kernelconcepts.de>

	* docs/reference/mimedir/Makefile.am: Update with more recent
	  gtk-doc bits.

2007-07-18  Graham Cobb  <g+770@cobb.uk.net>

	* Preparation for release 0.4.2...
	* Add gpe-dist.am for GPE release process

2007-04-07  Graham Cobb  <g+770@cobb.uk.net>

	* Undo broken change in revision 9093 which references
	mimedir-recurrence-rule.c but does not provide the file

2007-03-29  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir/mimedir-attribute.c (escape): escape semi-colons
	This fixes GPE bug 36.

2007-03-29  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir/mimedir-vcomponent.c (mimedir_vcomponent_read_from_profile):
	add support for VALARM component.
	This fixes GPE bug 10.
	* mimedir/mimedir-vcal.c (mimedir_vcal_read_from_profile): remove
	support for standalone VALARM element (VALARM within a VEVENT/VTODO
	is handled in mimedir-vcomponent.c)

2007-03-28  Graham Cobb  <g+770@cobb.uk.net>

	* mimedir-vcomponent.c (mimedir_vcomponent_class_init): make Trigger property read/write
	  This fixes GPE bug 9
	(mimedir_vcomponent_parse_attribute): fix crash parsing TRIGGER attribute

2007-03-28  Graham Cobb  <g+770@cobb.uk.net>
