@@ -1,3 +1,8 @@
+2008-04-28  Graham Cobb  <g+770@cobb.uk.net>
+
+	* mimedir/mimedir-vcard.c (mimedir_vcard_read_from_profile): Default missing N: attribute
+	from FN: or ORG: attribute (needed for some Palm-generated vCards)
+
 2008-02-04  Graham Cobb  <g+770@cobb.uk.net>
 
 	* mimedir/mimedir-recurrence.c (mimedir_recurrence_write_to_string): 
